add solutions for hw17