@@ -7,7 +7,6 @@ import java.util.stream.Collectors;
 
 public class Task5 {
     public static void main(String[] args) {
-        // Создаем коллекцию Box и инициализируем ее 10 коробками
         List<Box> boxes = new ArrayList<>();
         for (int i = 1; i <= 10; i++) {
             Box box = new Box(i * 10);
@@ -17,20 +16,16 @@ public class Task5 {
             boxes.add(box);
         }
 
-        // Применяем фильтр к коллекции коробок по размеру
         List<Box> filteredBoxes = boxes.stream()
                 .filter(box -> box.isSuitable(50))
-                .collect(Collectors.toList());
+                .toList();
 
-        // У оставшихся коробок взять коллекции Item
         List<Item> allItems = filteredBoxes.stream()
                 .flatMap(box -> box.getItems().stream())
                 .collect(Collectors.toList());
 
-        // Отсортировать по цене
         allItems.sort(Comparator.comparingInt(Item::getCost));
 
-        // Вывести цены в консоль
         allItems.forEach(item -> System.out.println(item.getCost()));
     }
 }
